examples/test/testpolicy15101.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15101
  namespace: namespace49
spec:
  podSelector:
    matchLabels:
      key34: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value26
          key4: value12
      podSelector:
        matchLabels:
          key42: value41
          key47: value12
